Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5957

Cannot debug Qt Quick UI application.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.4.0
    • Qt Creator 2.3.0
    • Workstation platform: Mac X OS 10.6.8
      Qt SDK version:v1.1.2
      (qtsdkinstaller-x64-2011-07-11.dmg)
      Qt Creator 2.2.85
      Based on Qt 4.7.4 (64 bit)
      Built on Aug 16 2011 at 16:54:47
      From revision 6a5dc75308
      [SDKTestRound18]
    • e2e0db687efd9b269d3f042d1a6d722f59a840e4

    Description

      Steps:
      1. In Creator go to 'File'->'New File or Project'
      2. Create 'Qt Quick UI " with default settings.
      3. Go project setting check "C++","QML Debuger"
      4. Click Debug button

      Actually result:.
      There is a warning pop-up ,about File format not recognized.

      Attachments

        1. cannotReg.jpg
          77 kB
          Chen xiaoxue
        For Gerrit Dashboard: QTCREATORBUG-5957
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            chenpxia Chen xiaoxue
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes