QmlProject: Fix debugging with C++ language

Because no ABI was specified, gdb bailed out with 'File format not
recognized'. Instead just use the ABI from one of the toolchains
available for the Qt version (assuming that they're all compatible).

Task-number: QTCREATORBUG-5957
Change-Id: I7db9bd45c6a015c6236ae1b672909e013fad1d65
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>
Reviewed-on: http://codereview.qt.nokia.com/4045
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>